add script inside html

--- a/signup.html
+++ b/signup.html
@@ -31,6 +31,7 @@
       <p class="mt-5 mb-3 text-muted">Your Newsletter</p>
     </form>
 
+    <script src="app.js" charset="utf-8"></script>
 
   </body>
 </html>
